[color=blue][b][size=12pt][u]Changelog[/u][/size][/b][/color]
[b]0.8 - 6 January 2012[/b]
o + Updated highslide to 4.1.13
o + Moved HS language strings to language file from js files
o + Moved hs4smf language strings to own file instead of modifications.language
o + Added option to count highslide views in a message as a gallery view
o + Added license BSD 2 clause
o ! Fixed error with captionOverlay opacity
o ! Small updates to options panel layout
o ! Some code cleanup, needs more :X

[b]0.7 - 21 March 2011[/b]
o + minor updates for 2.0 Gold (0.7a)
o ! fixed issue where aeva links were being hidden in a portal block
o ! fixed issue where the aspect ratio was being changed when the aeva option was enabled
o + Improved the caption logic, it will now show the aeva caption text when available on a gallery image and show the caption as defined in the admin panel for other images (attachments, in line image, etc).

[b]0.6 - 25 February 2011[/b]
o + Added ability to always show slide-show controls on images, even on a single image
o + Smart slide-show grouping (by message) improved, now all image forms in a post will be part of that posts slide-show (attachments, images or Aeva gallery.  Signature images are excluded.
o + Improved Aeva gallery interaction to provide similar Highslide visuals as defined by the admin panel.
o + Goggle Picasa thumbnails in the form of http://lh3.ggpht.com/xyz/abc/123/987/s144/xyz.jpg will Highslide
o + Certain other image sites (imageshack) will Highslide from just the thumbnail image, the full link/image is no longer required.
o + Updated to HS 4.1.9
o ! Fixed error with postimage.org files causing an undefined index, plus improved its handling

[b]0.5e - 3 November 2010[/b]
o + Updated package for RC4, any new features will be added for RC4+ only, RC3 updates are done

[b]0.5d - 12 October 2010[/b]
o ! fixed an issue when using the topic subject in the header/footer breaking the javascript (un-escaped chars)
