@@ -1,4 +1,8 @@
 [color=blue][b][size=12pt][u]Changelog[/u][/size][/b][/color]
+[b]0.8.1 - 22 January 2012[/b]
+o ! Fixed minor compatibility issue with ILA
+o ! Some more code cleanup, still needs more :'/
+
 [b]0.8 - 6 January 2012[/b]
 o + Updated highslide to 4.1.13
 o + Moved HS language strings to language file from js files
